anyway From Mac

--- a/match.html
+++ b/match.html
@@ -106,7 +106,7 @@
         <!-- オリジナルのキーワードを追加する -->
         <input type="text" v-model="new_keyword">
         <button @click="add_new_keyword">追加</button>
-        <div>matching実行(onlineで同じキーワードを持っているuserをcompanyかcustomerを表示)
+        <div>matching実行(onlineで同じキーワードを持っているuser(company|customer)を表示)
         </div>
         <!-- matching実行 -->
         <button @click="match_exe">match_exe</button>
