anyway From Mac

--- a/client4.html
+++ b/client4.html
@@ -180,6 +180,7 @@ const sequence_of_peer = () =>{
         });
     }
 
+    let url = "http://127.0.0.1:3000/client4.html";
     let user_json_str_a = JSON.stringify({name: "A", foo: "foo", bar: "bar"});
     let user_json_str_b = JSON.stringify({name: "B", foo: "fo", bar: "ba"});
     let url_str_a = ""
