--- a/match2.html
+++ b/match2.html
@@ -578,5 +578,33 @@ parse_url(){
     // return {get_peer_id, make_url_str_a, make_url_str_b,url_str_a, url_str_b};
 // }
 // const {get_peer_id, make_url_str_a, make_url_str_b,url_str_a, url_str_b} = sequence_of_peer();
+
+const text_id_ary = [
+        {id: 0, text: "今通話可能", text_stamp_url: "https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg"},
+        {id: 1, text: "通話OK", text_stamp_url: "https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg"},
+        {id: 2, text: "こんにちは", text_stamp_url: "https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg"},
+        {id: 3, text: "今NG", text_stamp_url: "https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg"},
+    ];
+// iso8601形式の日時を返す関数
+const get_iso8601 = () => {
+    const date = new Date();
+    return date.toISOString();
+}
+    let chat_ary = [
+        {date_time: get_iso8601(), id: 0, user_list: LIST_user, company_list: LIST_company, name:"a", type:"company", text_id: 0, text: "今通話可能"},
+        {date_time: get_iso8601(), id: 1, user_list: LIST_user, company_list: LIST_company, name:"c", type:"user", text_id: 0, text: "今通話可能"},
+    ];
+
+    let LIST_user = null;
+    let LIST_company = null;
+    // LIST_userにuser_json_str_aを入れる関数
+    const set_LIST_user = () => {
+        LIST_user = JSON.parse(user_json_str_a);
+    }
+    // LIST_companyにuser_json_str_bを入れる関数
+    const set_LIST_company = () => {
+        LIST_company = JSON.parse(user_json_str_b);
+    }
+
 </script>
 </html>
