anyway From Mac

--- a/match2.html
+++ b/match2.html
@@ -58,8 +58,6 @@
     <div id="app">
         <!-- input peer id a, length 200 chars -->
         <input type="text" value="peer_id_a" id="peer_id_a" style="width: 200rem;">
-        <!-- input peer id b -->
-        <input type="text" value="peer_id_b" id="peer_id_b" style="width: 200rem;">
 
         <button @click="parse_url">parse_url</button>
         <!-- user名のselect -->
@@ -514,8 +512,12 @@ start_chat(other_side_id, own_side_id){
     // 例:http://127.0.0.1:3000/client3.html?other_side_data_str=*****
     var url = window.location.href;
     var dirname = url.substring(0, url.lastIndexOf('/'));
-    this.other_side_data_link = dirname + "/match2.html?other_side_data_str=" + JSON.stringify(other_side_data);
-    this.own_side_data_link = dirname + "/match2.html?own_side_data_str=" + JSON.stringify(own_side_data);
+    // this.other_side_data_link = dirname + "/match2.html?other_side_data_str=" + JSON.stringify(other_side_data);
+    this.other_side_data_link = dirname + "/match2.html?other_side_data_str=" + JSON.stringify(other_side_data) + "&own_side_data_str=" + JSON.stringify(own_side_data);
+    // this.own_side_data_link = dirname + "/match2.html?own_side_data_str=" + JSON.stringify(own_side_data);
+    this.own_side_data_link = dirname + "/match2.html?other_side_data_str=" + JSON.stringify(own_side_data) + "&own_side_data_str=" + JSON.stringify(other_side_data);
+    // this.link_1 = dirname + "/match2.html?other_side_data_str=" + JSON.stringify(other_side_data) + "&own_side_data_str=" + JSON.stringify(own_side_data);
+    // this.link_2 = dirname + "/match2.html?other_side_data_str=" + JSON.stringify(own_side_data) + "&own_side_data_str=" + JSON.stringify(other_side_data);
 },
 parse_url(){
     const url = new URL(window.location.href);
@@ -543,6 +545,14 @@ parse_url(){
         path: '/peerjs/myapp'
     });
 
+const set_url = () =>{
+    const url = new URL(window.location.href);
+    // const other_side_data_str = url.searchParams.get('other_side_data_str');
+    let all_params = new URLSearchParams(window.location.search);
+    // 全てのget_paramを#peer_id_aにセットする
+    document.querySelector("#peer_id_a").value = all_params.toString();
+}
+
     // peer idを発行する関数(peer_id_aとpeer_id_b、それぞれ別のidを発行してそれぞれを変数に代入)
     // function get_peer_id(){
         peer.on('open', (id) => {
@@ -551,13 +561,15 @@ parse_url(){
         // peer_id_bの方が後からopenされるためmake_url_str_a()とmake_url_str_b()を実行する
         peer.on('open', (id) => {
             peer_id_b = id;
-            make_url_str_a();
-            make_url_str_b();
+            set_url();
         });
     // }
 
-    let url = "http://127.0.0.1:3000/client4.html"
+    // let url = "http://127.0.0.1:3000/client4.html"
+    let url = "http://127.0.0.1:3000/match2.html"
 
+    let LIST_1 = {};
+    let LIST_2 = {};
 // get_paramからother_side_data_strを取得する関数
 const get_other_side_data_str = () => {
     const url = new URL(window.location.href);
@@ -566,7 +578,7 @@ const get_other_side_data_str = () => {
         console.log("other_side_data_str", other_side_data_str);
         console.log(JSON.parse(other_side_data_str));
     }
-    return JSON.parse(other_side_data_str);
+    return JSON.stringify(other_side_data_str);
 }
 
 // get_paramからown_side_data_strを取得する関数
@@ -575,39 +587,25 @@ const get_own_side_data_str = () => {
     const own_side_data_str = url.searchParams.get('own_side_data_str');
     if (own_side_data_str){
         console.log("own_side_data_str", own_side_data_str);
-        console.log(JSON.parse(own_side_data_str));
+        console.log(JSON.stringify(own_side_data_str));
     }
-    return JSON.parse(own_side_data_str);
+    return JSON.stringify(own_side_data_str);
 }
 
 
 
-    let user_json_str_a = JSON.stringify({name: "A", foo: "foo", bar: "bar"});
-    let user_json_str_b = JSON.stringify({name: "B", foo: "fo", bar: "ba"});
-
     // 三項演算子でget_paramからother_side_data_strを取得、nullの場合は実行しない
-    user_json_str_a = get_other_side_data_str() ? get_other_side_data_str() : user_json_str_a;
+    LIST_1 = get_other_side_data_str() ? get_other_side_data_str() : LIST_1;
     // 三項演算子でget_paramからown_side_data_strを取得、nullの場合は実行しない
-    user_json_str_b = get_own_side_data_str() ? get_own_side_data_str() : user_json_str_b;
+    LIST_2 = get_own_side_data_str() ? get_own_side_data_str() : LIST_2;
 
 
 
-    let url_str_a = ""
-    let url_str_b = ""
+    let url_str_a = "";
+    let url_str_b = "";
     // aには対向のbを、bには対向のaをセットする、それぞれ用の2つの関数
 
-    // user_a用のurl文字列を作る関数
-    const make_url_str_a = () => {
-        url_str_a = url + '?user_json_str=' + user_json_str_a + '&peer_id_a=' + peer_id_a + '&peer_id_b=' + peer_id_b;
-        // id peer_id_a
-        document.querySelector("#peer_id_a").value = url_str_a;
-    }
-    // user_b用のurl文字列を作る関数
-    const make_url_str_b = () => {
-        url_str_b = url + '?user_json_str=' + user_json_str_b + '&peer_id_b=' + peer_id_a + '&peer_id_b=' + peer_id_a;
-        // id peer_id_b
-        document.querySelector("#peer_id_b").value = url_str_b;
-    }
+
     // return {get_peer_id, make_url_str_a, make_url_str_b,url_str_a, url_str_b};
 // }
 // const {get_peer_id, make_url_str_a, make_url_str_b,url_str_a, url_str_b} = sequence_of_peer();
@@ -623,21 +621,11 @@ const get_iso8601 = () => {
     const date = new Date();
     return date.toISOString();
 }
-let LIST_user = null;
-let LIST_company = null;
-// LIST_userにuser_json_str_aを入れる関数
-const set_LIST_user = () => {
-    LIST_user = JSON.parse(user_json_str_a);
-}
-// LIST_companyにuser_json_str_bを入れる関数
-const set_LIST_company = () => {
-    LIST_company = JSON.parse(user_json_str_b);
-}
-set_LIST_user();
-set_LIST_company();
+
+
     let chat_ary = [
-        {date_time: get_iso8601(), id: 0, user_list: LIST_user, company_list: LIST_company, name:"a", type:"company", text_id: 0, text: "今通話可能"},
-        {date_time: get_iso8601(), id: 1, user_list: LIST_user, company_list: LIST_company, name:"c", type:"user", text_id: 0, text: "今通話可能"},
+        {date_time: get_iso8601(), id: 0, my_user_list: LIST_1, another_user_list: LIST_2, name:"a", type:"company", text_id: 0, text: "今通話可能"},
+        {date_time: get_iso8601(), id: 1, my_user_list: LIST_2, another_user_list: LIST_1, name:"b", type:"customer", text_id: 1, text: "通話OK"},
     ];
 
 
