--- a/match2.html
+++ b/match2.html
@@ -551,6 +551,23 @@ const set_url = () =>{
     let all_params = new URLSearchParams(window.location.search);
     // 全てのget_paramを#peer_id_aにセットする
     document.querySelector("#peer_id_a").value = all_params.toString();
+
+    // 三項演算子でget_paramからother_side_data_strを取得、nullの場合は実行しない
+    LIST_1 = get_other_side_data_str() ? get_other_side_data_str() : LIST_1;
+    // 三項演算子でget_paramからown_side_data_strを取得、nullの場合は実行しない
+    LIST_2 = get_own_side_data_str() ? get_own_side_data_str() : LIST_2;
+
+// chat_aryをアップデートする
+// {date_time: get_iso8601(), id: 0, my_user_list: LIST_1, another_user_list: LIST_2, name:"a", type:"company", text_id: 0, text: "今通話可能"},
+// {date_time: get_iso8601(), id: 1, my_user_list: LIST_2, another_user_list: LIST_1, name:"b", type:"customer", text_id: 1, text: "通話OK"},
+chat_ary.push(
+    {date_time: get_iso8601(), id: 0, my_user_list: LIST_1, another_user_list: LIST_2, name:"a", type:"company", text_id: 0, text: "今通話可能"},
+)
+chat_ary.push(
+    {date_time: get_iso8601(), id: 1, my_user_list: LIST_2, another_user_list: LIST_1, name:"b", type:"customer", text_id: 1, text: "通話OK"},
+)
+
+
 }
 
     // peer idを発行する関数(peer_id_aとpeer_id_b、それぞれ別のidを発行してそれぞれを変数に代入)
@@ -578,7 +595,7 @@ const get_other_side_data_str = () => {
         console.log("other_side_data_str", other_side_data_str);
         console.log(JSON.parse(other_side_data_str));
     }
-    return JSON.stringify(other_side_data_str);
+    return JSON.parse(other_side_data_str);
 }
 
 // get_paramからown_side_data_strを取得する関数
@@ -589,15 +606,10 @@ const get_own_side_data_str = () => {
         console.log("own_side_data_str", own_side_data_str);
         console.log(JSON.stringify(own_side_data_str));
     }
-    return JSON.stringify(own_side_data_str);
+    return JSON.parse(own_side_data_str);
 }
 
 
-
-    // 三項演算子でget_paramからother_side_data_strを取得、nullの場合は実行しない
-    LIST_1 = get_other_side_data_str() ? get_other_side_data_str() : LIST_1;
-    // 三項演算子でget_paramからown_side_data_strを取得、nullの場合は実行しない
-    LIST_2 = get_own_side_data_str() ? get_own_side_data_str() : LIST_2;
 
 
 
@@ -623,10 +635,7 @@ const get_iso8601 = () => {
 }
 
 
-    let chat_ary = [
-        {date_time: get_iso8601(), id: 0, my_user_list: LIST_1, another_user_list: LIST_2, name:"a", type:"company", text_id: 0, text: "今通話可能"},
-        {date_time: get_iso8601(), id: 1, my_user_list: LIST_2, another_user_list: LIST_1, name:"b", type:"customer", text_id: 1, text: "通話OK"},
-    ];
+let chat_ary = [];
 
 
 </script>
